# insomnidle

./: Cargo.toml  README.md  flake.nix
client/: Cargo.toml
client/src/: main.rs
daemon/: Cargo.toml
daemon/src/: error.rs  main.rs
daemon/src/inhibitor/: dbus.rs  error.rs  mod.rs
ipc/: Cargo.toml
ipc/src/: lib.rs
