[workspace]
resolver = "2"
members = ["client", "daemon", "ipc"]

[workspace.package]
version = "0.0.1"
authors = ["Xarvex"]
edition = "2021"
rust-version = "1.74.1" # cargo-msrv on 2024-06-29
description = "Inhibit idling when playing media or by toggle"
repository = "https://gitlab.com/xarvex/persistwd"

[workspace.dependencies]
unidled-ipc = { path = "ipc" }
