[workspace]
resolver = "2"
members = ["client", "daemon", "ipc"]

[workspace.package]
version = "0.0.1"
authors = ["Xarvex"]
edition = "2021"
rust-version = "1.76.0" # cargo-msrv on 2024-09-14
description = "Inhibit idling when playing media or by toggle"
repository = "https://gitlab.com/xarvex/insomnidle"

[workspace.dependencies]
insomnidle-ipc = { path = "ipc" }
