[package]
name = "insomnidle"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.87"
bitcode = "0.6.3"
clap = { version = "4.5.17", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
insomnidle-ipc = { workspace = true, features = ["clap"] }
