[package]
name = "insomnidle-daemon"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
bitcode = "0.6.3"
clap = { version = "4.5.17", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
insomnidle-ipc = { workspace = true }
zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }
