[package]
name = "insomnidle-daemon"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.87"
bitcode = "0.6.3"
clap = { version = "4.5.17", features = ["derive"] }
insomnidle-ipc = { workspace = true }
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }
